clusters/production/cluster-config/schnappy-ephemeral-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: schnappy-ephemeral
  labels:
    istio.io/rev: default
    environment: ephemeral
