clusters/production/cluster-config/schnappy-infra-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: schnappy-infra
  labels:
    istio.io/rev: default
    gateway: "true"
