clusters/production/cluster-config/schnappy-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: schnappy
  labels:
    istio-injection: enabled
