clusters/production/cluster-config/schnappy-test-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: schnappy-test
  labels:
    istio.io/rev: default
    environment: test
