clusters/production/cluster-config/schnappy-ephemeral-default-deny.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: schnappy-ephemeral-default-deny
  namespace: schnappy-ephemeral
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - podSelector: {}
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: argocd
      ports:
        - protocol: TCP
          port: 8080
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: schnappy
          podSelector:
            matchLabels:
              gateway.networking.k8s.io/gateway-name: schnappy-gateway
    - ports:
        - protocol: TCP
          port: 15021
  egress:
    - ports:
        - { protocol: UDP, port: 53 }
        - { protocol: TCP, port: 53 }
    - to:
        - podSelector: {}
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: istio-system
      ports:
        - { protocol: TCP, port: 15012 }
        - { protocol: TCP, port: 15010 }
        - { protocol: TCP, port: 15014 }
        - { protocol: TCP, port: 443 }
    - ports:
        - { protocol: TCP, port: 443 }
        - { protocol: TCP, port: 6443 }
    - to:
        - ipBlock:
            cidr: 192.168.11.5/32
      ports:
        - { protocol: TCP, port: 8200 }
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: schnappy
      ports:
        - { protocol: TCP, port: 4318 }
